--- a/app.json
+++ b/app.json
@@ -9,19 +9,17 @@
       "resizeMode": "contain",
       "backgroundColor": "#FF6B6B"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hellovisto.app"
     },
     "android": {
+      "package": "com.hellovisto.app",
       "adaptiveIcon": {
         "backgroundColor": "#FF6B6B"
       }
     },
-    "plugins": [
-      "expo-font"
-    ]
+    "plugins": ["expo-font"]
   }
 }
